--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,11 @@
 <body>
 	<nav th:replace="fragments/nav"></nav>
         
-        
+        <div class="container">
+            <ul class="list-group">
+                <li class="list-group-item" th:each="citation : ${citations}" th:text="${citation}"></li>
+            </ul>
+        </div>
 	
 	<script th:replace="fragments/scripts">scripts</script>
 </body>
