Revert Binding inputs on creation form

--- a/src/main/resources/templates/create-citation.html
+++ b/src/main/resources/templates/create-citation.html
@@ -21,25 +21,25 @@
                     <div class="form-group">
                         <label for="article-author">Author</label>
                         <spring:bind path="article.author">
-                            <input class="form-control" type="text" name="${status.expression}" value="${status.value}" id="article-author" required="required" placeholder="Aseta artikkelin Author"/>
+                            <input class="form-control" type="text" name="article-author" id="article-author" required="required" placeholder="Aseta artikkelin Author"/>
                         </spring:bind>
                     </div>
                     <div class="form-group">
                         <label for="article-name">Name</label>
                         <spring:bind path="article.name">
-                            <input class="form-control" type="text" name="${status.expression}" value="${status.value}" id="article-name" required="required" placeholder="Aseta artikkelin Name"/>
+                            <input class="form-control" type="text" name="article-name" id="article-name" required="required" placeholder="Aseta artikkelin Name"/>
                         </spring:bind>
                     </div>
                     <div class="form-group">
                         <label for="article-journal">Journal</label>
                         <spring:bind path="article.journal">
-                            <input class="form-control" type="text" name="${status.expression}" value="${status.value}" id="article-journal" required="required" placeholder="Aseta artikkelin Journal"/>
+                            <input class="form-control" type="text" name="article-journal" id="article-journal" required="required" placeholder="Aseta artikkelin Journal"/>
                         </spring:bind>
                     </div>
                     <div class="form-group">
                         <label for="article-year">Year</label>
                         <spring:bind path="article.year">
-                            <input class="form-control" type="text" name="${status.expression}" value="${status.value}" id="article-year" required="required" placeholder="Aseta artikkelin Year"/>
+                            <input class="form-control" type="text" name="article-year" id="article-year" required="required" placeholder="Aseta artikkelin Year"/>
                         </spring:bind>
                     </div>
 
@@ -47,37 +47,37 @@
                     <div class="form-group">
                         <label for="article-volume">Volume</label>
                         <spring:bind path="article.volume">
-                            <input class="form-control" type="text" name="${status.expression}" value="${status.value}" id="article-volume" placeholder="Aseta artikkelin Volume"/>
+                            <input class="form-control" type="text" name="article-volume" id="article-volume" placeholder="Aseta artikkelin Volume"/>
                         </spring:bind>
                     </div>
                     <div class="form-group">
                         <label for="article-number">Number</label>
                         <spring:bind path="article.number">
-                            <input class="form-control" type="text" name="${status.expression}" value="${status.value}" id="article-number" placeholder="Aseta artikkelin Number"/>
+                            <input class="form-control" type="text" name="article-number" id="article-number" placeholder="Aseta artikkelin Number"/>
                         </spring:bind>
                     </div>
                     <div class="form-group">
                         <label for="article-pages">Pages</label>
                         <spring:bind path="article.pages">
-                            <input class="form-control" type="text" name="${status.expression}" value="${status.value}" id="article-pages" placeholder="Aseta artikkelin Pages"/>
+                            <input class="form-control" type="text" name="article-pages" id="article-pages" placeholder="Aseta artikkelin Pages"/>
                         </spring:bind>
                     </div>
                     <div class="form-group">
                         <label for="article-month">Month</label>
                         <spring:bind path="article.month">
-                            <input class="form-control" type="text" name="${status.expression}" value="${status.value}" id="article-month" placeholder="Aseta artikkelin Month"/>
+                            <input class="form-control" type="text" name="article-month" id="article-month" placeholder="Aseta artikkelin Month"/>
                         </spring:bind>
                     </div>
                     <div class="form-group">
                         <label for="article-note">Note</label>
                         <spring:bind path="article.note">
-                            <input class="form-control" type="text" name="${status.expression}" value="${status.value}" id="article-note" placeholder="Aseta artikkelin Note"/>
+                            <input class="form-control" type="text" name="article-note" id="article-note" placeholder="Aseta artikkelin Note"/>
                         </spring:bind>
                     </div>
                     <div class="form-group">
                         <label for="article-key">Key</label>
                         <spring:bind path="article.key">
-                            <input class="form-control" type="text" name="${status.expression}" value="${status.value}" id="article-key" placeholder="Aseta artikkelin Key"/>
+                            <input class="form-control" type="text" name="article-key" id="article-key" placeholder="Aseta artikkelin Key"/>
                         </spring:bind>
                     </div>
                 </div>
