--- a/src/main/resources/templates/create-citation.html
+++ b/src/main/resources/templates/create-citation.html
@@ -20,65 +20,45 @@
                     <!-- Required -->
                     <div class="form-group">
                         <label for="article-author">Author</label>
-                        <spring:bind path="article.author">
-                            <input class="form-control" type="text" name="article-author" id="article-author" required="required" placeholder="Aseta artikkelin Author"/>
-                        </spring:bind>
+                        <input class="form-control" type="text" name="article-author" th:field="${Article.author}" id="article-author" required="required" placeholder="Aseta artikkelin Author"/>
                     </div>
                     <div class="form-group">
                         <label for="article-name">Name</label>
-                        <spring:bind path="article.name">
-                            <input class="form-control" type="text" name="article-name" id="article-name" required="required" placeholder="Aseta artikkelin Name"/>
-                        </spring:bind>
+                        <input class="form-control" type="text" name="article-name" th:field="${Article.name}" id="article-name" required="required" placeholder="Aseta artikkelin Name"/>
                     </div>
                     <div class="form-group">
                         <label for="article-journal">Journal</label>
-                        <spring:bind path="article.journal">
-                            <input class="form-control" type="text" name="article-journal" id="article-journal" required="required" placeholder="Aseta artikkelin Journal"/>
-                        </spring:bind>
+                        <input class="form-control" type="text" name="article-journal" th:field="${Article.journal}" id="article-journal" required="required" placeholder="Aseta artikkelin Journal"/>
                     </div>
                     <div class="form-group">
                         <label for="article-year">Year</label>
-                        <spring:bind path="article.year">
-                            <input class="form-control" type="text" name="article-year" id="article-year" required="required" placeholder="Aseta artikkelin Year"/>
-                        </spring:bind>
+                        <input class="form-control" type="text" name="article-year" th:field="${Article.year}" id="article-year" required="required" placeholder="Aseta artikkelin Year"/>
                     </div>
 
                     <!-- Optional -->
                     <div class="form-group">
                         <label for="article-volume">Volume</label>
-                        <spring:bind path="article.volume">
-                            <input class="form-control" type="text" name="article-volume" id="article-volume" placeholder="Aseta artikkelin Volume"/>
-                        </spring:bind>
+                        <input class="form-control" type="text" name="article-volume" th:field="${Article.volume}" id="article-volume" placeholder="Aseta artikkelin Volume"/>
                     </div>
                     <div class="form-group">
                         <label for="article-number">Number</label>
-                        <spring:bind path="article.number">
-                            <input class="form-control" type="text" name="article-number" id="article-number" placeholder="Aseta artikkelin Number"/>
-                        </spring:bind>
+                        <input class="form-control" type="text" name="article-number" th:field="${Article.number}" id="article-number" placeholder="Aseta artikkelin Number"/>
                     </div>
                     <div class="form-group">
                         <label for="article-pages">Pages</label>
-                        <spring:bind path="article.pages">
-                            <input class="form-control" type="text" name="article-pages" id="article-pages" placeholder="Aseta artikkelin Pages"/>
-                        </spring:bind>
+                        <input class="form-control" type="text" name="article-pages" th:field="${Article.pages}" id="article-pages" placeholder="Aseta artikkelin Pages"/>
                     </div>
                     <div class="form-group">
                         <label for="article-month">Month</label>
-                        <spring:bind path="article.month">
-                            <input class="form-control" type="text" name="article-month" id="article-month" placeholder="Aseta artikkelin Month"/>
-                        </spring:bind>
+                        <input class="form-control" type="text" name="article-month" th:field="${Article.month}" id="article-month" placeholder="Aseta artikkelin Month"/>
                     </div>
                     <div class="form-group">
                         <label for="article-note">Note</label>
-                        <spring:bind path="article.note">
-                            <input class="form-control" type="text" name="article-note" id="article-note" placeholder="Aseta artikkelin Note"/>
-                        </spring:bind>
+                        <input class="form-control" type="text" name="article-note" th:field="${Article.note}" id="article-note" placeholder="Aseta artikkelin Note"/>
                     </div>
                     <div class="form-group">
                         <label for="article-key">Key</label>
-                        <spring:bind path="article.key">
-                            <input class="form-control" type="text" name="article-key" id="article-key" placeholder="Aseta artikkelin Key"/>
-                        </spring:bind>
+                        <input class="form-control" type="text" name="article-key" th:field="${Article.key}" id="article-key" placeholder="Aseta artikkelin Key"/>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Lisää uusi Viite</button>
