--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
         
         <div class="container">
             <ul class="list-group">
-                <li class="list-group-item" th:each="citation : ${citations}" th:text="${citation}"></li>
+                <li class="list-group-item" th:each="citation : ${citations}" th:text="${citation.toString()}"></li>
             </ul>
         </div>
 	
