--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head">
 	<meta charset="utf-8" />
 	<title>Ohtu-kki</title>
@@ -7,11 +7,37 @@
 </head>
 <body>
 	<nav th:replace="fragments/nav"></nav>
-        
         <div class="container">
+            <form method="POST" th:action="@{/filter}"  th:if="${not #lists.isEmpty(citations)}">
+                <div class="form-group">
+                  <h2>Filter results with </h2>
+                  <div class="col-xs-3">
+                    <label for="author">Author:</label>
+                    <input type="text" class="form-control" id="author" name="author" />
+                  </div>
+                  <div class="col-xs-1">
+                    <label for="year">Year:</label>
+                    <input type="text" class="form-control" id="year" name="year" />
+                  </div>
+                  <div class="col-xs-3">
+                    <label for="publication">Publication:</label>
+                    <input type="text" class="form-control" id="publication" name="publication" disabled="" />
+                  </div>
+                <button type="submit" class="btn btn-primary">Filter now</button>
+                </div>
+                <p>&nbsp;</p>
+                <hr />
+            </form>
             <ul class="list-group">
                 <li class="list-group-item" th:each="citation : ${citations}" th:text="${citation.toString()}"></li>
             </ul>
+            <div  th:if="${not #lists.isEmpty(citations)}">
+                <hr />
+                <p>Download BibTex file (at the moment into browser):</p>
+                <a href="/download" class="btn btn-primary">
+                  <span class="glyphicon glyphicon-download-alt"></span> Download
+                </a>
+            </div>
         </div>
 	
 	<script th:replace="fragments/scripts">scripts</script>
