Force file dowload into blanck window

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,7 +34,7 @@
             <div  th:if="${not #lists.isEmpty(citations)}">
                 <hr />
                 <p>Download BibTex file (at the moment into browser):</p>
-                <a href="/download" class="btn btn-primary">
+                <a href="/download" class="btn btn-primary" target="_blank">
                   <span class="glyphicon glyphicon-download-alt"></span> Download
                 </a>
             </div>
