--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,8 @@
                     <label for="publication">Publication:</label>
                     <input type="text" class="form-control" id="publication" name="publication" disabled="" />
                   </div>
+                </div>
+                <div class="form-group">
                 <button type="submit" class="btn btn-primary">Filter now</button>
                 </div>
                 <p>&nbsp;</p>
