--- a/src/main/resources/templates/create-citation.html
+++ b/src/main/resources/templates/create-citation.html
@@ -13,9 +13,12 @@
                     <label for="type">Valitse tyyppi</label>
                     <select name="type" id="type" v-model="type" class="form-control">
                         <option value="article">Artikkeli</option>
+                        <option value="book">Kirja</option>
                     </select>
                 </div>
-                <!-- Book -->
+                <hr/>
+                
+                <!-- Article -->
                 <div v-if="type=='article'">
                     <!-- Required -->
                     <div class="form-group">
@@ -65,18 +68,74 @@
                         <input class="form-control" type="text" th:field="*{articleCitation.key}" id="article-key" placeholder="Aseta artikkelin Key"/>
                     </div>
                 </div>
+                <!-- Book -->
+                <div v-if="type=='book'">
+                    <!-- Required -->
+                    <div class="form-group">
+                        <label for="book-id">ID</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.id}" id="book-id" required="required" placeholder="Aseta kirjan ID"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="book-editor">Editor</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.editor}" id="book-editor" required="required" placeholder="Aseta kirjan Editor"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="book-title">Title</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.name}" id="book-title" required="required" placeholder="Aseta kirjan Title"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="book-publisher">Publisher</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.publisher}" id="book-publisher" required="required" placeholder="Aseta kirjan Publisher"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="book-year">Year</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.year}" id="book-year" required="required" placeholder="Aseta kirjan Year"/>
+                    </div>
+
+                    <!-- Optional -->
+                    <div class="form-group">
+                        <label for="book-volume">Volume</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.volume}" id="book-volume" placeholder="Aseta kirjan Volume"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="book-series">Series</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.series}" id="book-series" placeholder="Aseta kirjan Series"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="book-address">Address</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.address}" id="book-address" placeholder="Aseta kirjan Address"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="book-edition">Edition</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.edition}" id="book-edition" placeholder="Aseta kirjan Edition"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="book-month">Month</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.month}" id="book-month" placeholder="Aseta kirjan Month"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="book-note">Note</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.note}" id="book-note" placeholder="Aseta kirjan Note"/>
+                    </div>
+                    <div class="form-group">
+                        <label for="book-key">Key</label>
+                        <input class="form-control" type="text" th:field="*{bookCitation.key}" id="book-key" placeholder="Aseta kirjan Key"/>
+                    </div>
+                </div>
+                
+                
+                <hr/>
                 <button type="submit" class="btn btn-primary">Lisää uusi Viite</button>
             </form>
         </div>
         
         <script th:replace="fragments/scripts">scripts</script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.21/vue.min.js"></script>
         <script>
             new Vue({
                     el: 'body',
 
               data: {
-                    type: ''
+                    type: 'article'
               },
             });
         </script>
