Cleaned listing and added highlighting to query matches

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,8 +28,8 @@
                 </thead>
                 <tbody>
                     <tr v-for="item in listItems">
-                        <td>{{item.id}}</td>
-                        <td>{{printCitation(item)}}</td>
+                        <td>{{{item.id}}}</td>
+                        <td>{{{printCitation(item)}}}</td>
                     </tr>
                 </tbody>
             </table>
