Added all Citation types and made types easier and more readable

--- a/src/main/resources/templates/create-citation.html
+++ b/src/main/resources/templates/create-citation.html
@@ -30,8 +30,8 @@
                         <input class="form-control" type="text" th:field="*{articleCitation.author}" id="article-author" required="required" placeholder="Aseta artikkelin Author"/>
                     </div>
                     <div class="form-group">
-                        <label for="article-name">Name</label>
-                        <input class="form-control" type="text" th:field="*{articleCitation.name}" id="article-name" required="required" placeholder="Aseta artikkelin Name"/>
+                        <label for="article-title">Title</label>
+                        <input class="form-control" type="text" th:field="*{articleCitation.title}" id="article-title" required="required" placeholder="Aseta artikkelin Title"/>
                     </div>
                     <div class="form-group">
                         <label for="article-journal">Journal</label>
@@ -81,7 +81,7 @@
                     </div>
                     <div class="form-group">
                         <label for="book-title">Title</label>
-                        <input class="form-control" type="text" th:field="*{bookCitation.name}" id="book-title" required="required" placeholder="Aseta kirjan Title"/>
+                        <input class="form-control" type="text" th:field="*{bookCitation.title}" id="book-title" required="required" placeholder="Aseta kirjan Title"/>
                     </div>
                     <div class="form-group">
                         <label for="book-publisher">Publisher</label>
