--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,20 +33,24 @@
                     </button>  
                 </span>
             </div>
+            
+            <hr/>
         </form>
 
         <!-- Items -->
-        <table class="table" v-if="listItems.length > 0">
+        <table class="table table-bordered table-striped" v-if="listItems.length > 0">
             <thead>
               <tr>
                 <th>ID</th>
-                <th>Citation</th>
+                <th>Type</th>
+                <th></th>
               </tr>
             </thead>
             <tbody>
                 <tr v-for="item in listItems">
                     <td>{{{item.id}}}</td>
-                    <td>{{{printCitation(item)}}}</td>
+                    <td>{{{item.citationType}}}</td>
+                    <td style="padding:0px;">{{{printCitation(item)}}}</td>
                     <td><button v-on:click.prevent="remove(item)" class="btn btn-danger btn-sm"><i class="glyphicon glyphicon-remove"></i> Poista</button></td>
                 </tr>
             </tbody>
